--- a/html-css-modulo3/desafio012/style/style.css
+++ b/html-css-modulo3/desafio012/style/style.css
@@ -1,5 +1,13 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+
+:root{
+    --fonte1:  Verdana, Geneva, Tahoma, sans-serif;
+    --fonte2: 'Poppins', sans-serif;
+    --fonte3: 'Sriracha', cursive;
+}
 *{
     margin: 0;
     padding: 0;
@@ -8,19 +16,26 @@
 html, body{
     min-height: 100vh;
     background-color: darkgray;
+    font-family: var(--fonte1);
 }
 
 header{
+    
+    font-family: 'Poppins';
     background-color: black;
     color: white;
     text-align: center;
 }
 header > h1{
-    
+    font-size: 8vw;
+    font-family: var(--fonte2);
     font-variant: small-caps;
+
 }
 header > p{
+    
     padding-bottom: 50px;
+    
 }
 header a, footer a {
     color: white;
@@ -33,8 +48,7 @@ header a:hover, footer a:hover{
 section{
     padding-top: 10vh;
     padding-bottom: 10vh;
-    line-height: 2em;
-    
+    font-size: 2em;
 }
 section.normal{
     background-color: white;
@@ -44,14 +58,34 @@ section.normal{
 section.img{
     background-color: rgba(0, 0, 0, 0.308);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.274);
+    background-size: cover;
+    background-attachment: fixed;
+    
 }
 section.img > p{
     background-color: rgba(0, 0, 0, 0.137);
-    max-width: 350px;
+    display: inline-block;
     border-radius: 10px;
-    padding-left: 10px;
+    padding: 10px;
     margin-left: 10px;
+    text-shadow: 2px 1px 0px black;
     
+}
+section > p {
+    font-family: var(--fonte3);
+    text-align: justify;
+    padding-bottom: 1em;
+    
+}
+section#img01{
+    background-image: url('../imagens/background001.jpg');
+    background-position: right center;
+    
+}
+section#img02{
+    background-image: url('../imagens/background002.jpg');
+    background-position: right center;
 }
 footer{
     background-color: black;
