--- a/html-css-modulo2/Desafiomod2/estilo/estilo.css
+++ b/html-css-modulo2/Desafiomod2/estilo/estilo.css
@@ -3,7 +3,7 @@
 
 @font-face {
 font-family: 'Android';
-src: url('fontes/idroid.otf') format('opentype');
+src: url('../fontes/idroid.otf') format('opentype');
 font-weight: normal;
 }
 
@@ -26,6 +26,7 @@ font-weight: normal;
 body{
     background-color: var(--cor0);
     font-family: var(--fonte-padrao);
+    position: relative;
 }
 header{
 margin-top: 1px;
@@ -34,6 +35,7 @@ background-image: linear-gradient(to bottom, var(--cor1), var(--cor4));
 padding: 5px;
 min-height: 150px; 
 }
+
 
 header h1{
     color: white;
@@ -72,6 +74,8 @@ nav{
     text-align: right;
     border-radius: 0px 0px 15px 15px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.233);
+    position: sticky;
+    top: 0;
     
 }
 nav a {
