--- a/Layouts/modelos/01/index.html
+++ b/Layouts/modelos/01/index.html
@@ -33,7 +33,7 @@
       .header {
         background-color: var(--cor1);
         width: 100%;
-        height: 10vh;
+        min-height: 10vh;
         display: flex;
         justify-content: space-between;
         align-items: center;
@@ -59,7 +59,8 @@
 
       /* ================================================BANNER========================================================== */
       .banner {
-        height: 20vh;
+        width: 100%;
+        min-height: 20vh;
         background-color: var(--cor2);
         display: flex;
         justify-content: center;
@@ -77,6 +78,7 @@
         flex-direction: column;
         justify-content: flex-end;
         align-items: center;
+        margin: 10px;
       }
       .banner a {
         text-decoration: none;
